--- a/.gitignore
+++ b/.gitignore
@@ -135,3 +135,4 @@ client/OnlineSurvival/Library/
 client/OnlineSurvival/obj/
 client/OnlineSurvival/Temp/
 client/OnlineSurvival/obj/
+client/Build/OnlineSurvival_Data/
