--- a/client/OnlineSurvival/Packages/manifest.json
+++ b/client/OnlineSurvival/Packages/manifest.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "com.leopotam.ecslite": "https://github.com/Leopotam/ecslite.git",
+    "com.leopotam.ecslite.unityeditor": "https://github.com/Leopotam/ecslite-unityeditor.git",
     "com.unity.collab-proxy": "2.4.4",
     "com.unity.feature.2d": "2.0.0",
     "com.unity.ide.rider": "3.0.26",
